# workshop_units

./: .gitignore  CMakeLists.txt  README.md  quantity.patch
include/: base_dimensions.h  dimension.h  frequency.h  length.h  quantity.h  time.h  type_list.h  unit.h  velocity.h
ref/include/: base_dimensions.h  common_ratio.h  dimension.h  frequency.h  length.h  quantity.h  time.h  type_list.h  unit.h  velocity.h
ref/src/: example.cpp  tests.cpp
src/: tests.cpp
